# study-youtube-anki-cards

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: exceptions.py  job_manager.py  pipeline.py
backend/app/llm/: base.py  claude_provider.py  deepseek_provider.py  factory.py  openai_provider.py
backend/app/services/: anki_builder.py  card_enrichment.py  downloader.py  segmenter.py  srt_splitter.py  subtitles.py  transcriber.py  video_cutter.py
backend/app/utils/: file_utils.py  time_utils.py
backend/tests/: test_segmenter.py  test_srt_splitter.py  test_time_utils.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: main.json
frontend/src-tauri/icons/: README.txt  icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts
frontend/src/components/: ErrorBanner.tsx  ProgressBar.tsx  StageIndicator.tsx  UrlForm.tsx
frontend/src/hooks/: useJobPolling.ts
