[project]
name = "anki-youtube-generator"
version = "0.1.0"
description = "Local backend that converts YouTube videos into Anki decks (.apkg)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "yt-dlp>=2024.8.6",
    "faster-whisper>=1.0.3",
    "pysubs2>=1.7.3",
    "srt>=3.5.3",
    "genanki>=0.13.1",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
